<resources>
    <string name="app_name">tattThat</string>
    <string name="app_title">tattThat</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>

    <!-- Get started activity strings-->
    <string name="login_button_text">Login</string>
    <string name="username_hint">email</string>
    <string name="password_hint">password</string>

    <!-- Create Account activity strings -->
    <string name="create_button_text">Sign Up!</string>
    <string name="creation_success_toast">Success! Welcome to Tatt That</string>
    <string name="login_welcome">Welcome Back!</string>
    <string name="create_account_textview">No account yet? Create one, or</string>

    <string name="title_featured">Featured</string>

    <string name="title">Tatt That</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer closed</string>
    <string name="nav_featured_title">Featured</string>
    <string name="categories_title">Categories</string>
    <string name="favorites_title">Favorites</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Log Out</string>
    <string name="action_page">Page</string>

    <string name="cat_featured">featured</string>
    <string name="cat_animal">animal-tattoos</string>
    <string name="box_choice">Choose</string>
    <string name="title_activity_favorites">FavoritesActivity</string>

    <string name="favorites_remove_toast">has been removed from favorites</string>
    <string name="favorites_saved">has been saved to favorites</string>
    <string name="favorites_null">Oops, it looks like you don\'t have any favorites saved yet</string>
    <string name="favorites_null_with_network">Oops, looks like you have no favorites stored on your phone or online</string>

    <string name="no_network">There is currently no active network connection. This app requires a network connection to retrieve tattoos.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="firebase_check_title">Sync to cloud</string>
    <string name="firebase_check_summary">save your favorites to the cloud so that you never loss them</string>

    <!-- content descriptions-->
    <string name="enter_email">Enter email here</string>
    <string name="enter_password">Enter password here</string>
    <string name="login_button">Login Button</string>
    <string name="create_account_intent">Opens create account page</string>
    <string name="login_google_button">Login Button for Google</string>
    <string name="signup_button">Sign Up Button</string>
    <string name="tattoo_content">Featured Tattoo Content</string>
    <string name="add_to_favs_button">Add to favorites button</string>
    <string name="tattoo_title">Name of the tattoo</string>
    <string name="tattoo_detail">Detailed image of the tattoo selected </string>
    <string name="cloud_settings">Synch data to the cloud by checking this preference</string>
    
    <string name="facebook_app_id">1053799981379112</string>
    <string name="banner_ad_unit_id">ca-app-pub-8401259315816623/8736012991</string>

    <string name="appwidget_text">tattThat Favorites</string>

    <string name="pass_length">Password to short. Please enter a minimum of 6 characters.</string>
    <string name="empty_text">Please enter your email and password before proceeding.</string>
    <string name="invalid_email">Please enter a correct email address.</string>

</resources>
