<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_first_item"
                android:title="@string/nav_featured_title"
                android:checked="true"/>

            <item
                android:id="@+id/nav_second_item"
                android:title="@string/categories_title"/>

            <item
                android:id="@+id/nav_third_item"
                android:title="@string/favorites_title"/>

        </group>

        <group
            android:checkableBehavior="single">

            <item
                android:id="@+id/nav_fourth_item"
                android:title="@string/settings_title"/>

            <item
                android:id="@+id/nav_fifth_item"
                android:title="@string/logout_title"/>
        </group>

</menu>