<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.GetStartedActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.GetStartedActivity"
        tools:showIn="@layout/activity_get_started"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/title_textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:textColor="@color/textIcons"
            android:textSize="45sp"
            android:typeface="sans"
            android:fontFamily="sans-serif"
            android:textIsSelectable="true"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:id="@+id/textView2"
            android:layout_below="@+id/title_textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textIcons"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailText"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textIcons"
            android:typeface="normal"
            android:singleLine="false"
            android:layout_marginTop="3dp"
            android:textSize="30sp"
            android:backgroundTint="#ffffff"
            android:contentDescription="@string/enter_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:id="@+id/textView3"
            android:layout_below="@+id/emailText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textIcons"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="30sp"
            android:layout_marginTop="3dp"
            android:backgroundTint="@color/textIcons"
            android:textColor="@color/textIcons"
            android:contentDescription="@string/enter_password"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/login_button"
            android:layout_below="@+id/passwordText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/textIcons"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:onClick="loginAccount"
            android:elevation="6dp"
            android:contentDescription="@string/login_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_textview"
            android:id="@+id/signup_intent_textview"
            android:layout_below="@+id/login_button"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:textColor="@color/textIcons"
            android:clickable="true"
            android:textSize="18sp"
            android:paddingTop="13dp"
            android:fontFamily="sans-serif-light"
            android:onClick="signUpIntent"
            android:paddingBottom="10dp"
            android:contentDescription="@string/create_account_intent"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_intent_textview"
            android:contentDescription="@string/login_google_button">
        </com.google.android.gms.common.SignInButton>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
