<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                tools:context=".ui.DetailActivityFragment"
                tools:showIn="@layout/activity_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/card_view"
        android:paddingStart="16dp"
        android:paddingLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/full_tattoo_imageview"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"
                android:scaleType="fitStart"
                android:src="@drawable/tattooplaceholder"
                android:contentDescription="@string/tattoo_detail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_textview"
                android:fontFamily="sans-serif"
                android:layout_gravity="left"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingBottom="5dp"
                android:textSize="18sp"
                android:text="text"
                android:contentDescription="@string/tattoo_title"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fav_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:src="@drawable/starempty"
        android:contentDescription="@string/add_to_favs_button"/>

</FrameLayout>

