<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.CreateAccountActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.CreateAccountActivity"
        tools:showIn="@layout/activity_create_account"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/title_textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:textColor="@color/textIcons"
            android:textSize="45sp"
            android:typeface="sans"
            android:fontFamily="sans-serif-light"
            android:textIsSelectable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:id="@+id/textView2"
            android:layout_below="@+id/title_textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"

            android:textColor="@color/textIcons"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/create_email"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textIcons"
            android:typeface="normal"
            android:singleLine="false"
            android:layout_marginTop="3dp"
            android:textSize="30sp"
            android:backgroundTint="#ffffff"
            android:contentDescription="@string/enter_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:id="@+id/textView3"
            android:layout_below="@+id/create_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textIcons"
            android:textSize="22sp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/create_password"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="30sp"
            android:layout_marginTop="3dp"
            android:backgroundTint="@color/textIcons"
            android:textColor="@color/textIcons"
            android:contentDescription="@string/enter_password"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_button_text"
            android:id="@+id/login_button"
            android:layout_below="@+id/create_password"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/textIcons"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:onClick="createAccount"
            android:elevation="6dp"
            android:contentDescription="@string/signup_button"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
